--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,5 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://admin:admin@cluster0.kihguwh.mongodb.net/?retryWrites=true&w=majority
+      uri: mongodb+srv://admin:admin@cluster0.g37u4wy.mongodb.net/?retryWrites=true&w=majority
       database: LetsPlayDB
-      auto-index-creation: true
