--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,3 +3,5 @@ spring:
     mongodb:
       uri: mongodb+srv://admin:admin@cluster0.g37u4wy.mongodb.net/?retryWrites=true&w=majority
       database: LetsPlayDB
+jwtSecret: ==DangLam88==
+jwtExpirationMs: 86400000
