--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,11 @@
 			<version>0.11.5</version>
 		</dependency>
 		<dependency>
+			<groupId>javax.validation</groupId>
+			<artifactId>validation-api</artifactId>
+			<version>2.0.0.Final</version>
+		</dependency>
+		<dependency>
 			<groupId>jakarta.persistence</groupId>
 			<artifactId>jakarta.persistence-api</artifactId>
 			<version>3.1.0</version> <!-- Use the appropriate version -->
