--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,7 @@
 # Spring Boot application name
 spring.application.name=LetsPlay
 
+# Spring Boot server port
 server.port=8080
 
 # MongoDB properties
